<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmsOblig</string>
    <string name="action_settings">Settings</string>
        <string name="action_refresh">Ny sms</string>
    
    
    <string name="hello_world">Hello world!</string>
	<string name="title_splash">Loading</string>
	<string name="ContactDbHandler">Contact Db Handler</string>
	<string name="close_button">Close</string>
		<string name="save_button">Save</string>
				<string name="delete_button">Delete</string>
		
	
	<string name="rules_text">Fyll ut navn, telefonnummer og keyfil-navn + fil-endelse:</string>
		<string name="navn_text">Navn:</string>
		<string name="tlf_text">Tlf:</string>
			<string name="dato_text">Keyfil-navn:</string>
		
	<string name="title_activity_rules">RulesActivity</string>
		<string name="title_activity_add">AddActivity</string>
				<string name="title_activity_settings">Settings</string>
								<string name="title_activity_Service">Service</string>
												<string name="title_activity_ReceiveSMSActivity">Service</string>
								
		
		<string name="SmsDbHandler">Sms Db Handler</string>
											<string name="sms">Sms</string>
												<string name="SmsList">Sms ListView</string>
												<string name="EditSms">Edit Sms</string>
												<string name="MainMenu">Main Menu</string>
												<string name="About">About</string>
												
												
														<string name="title_activity_MainMenu">Main Menu</string>
								
														<string name="about_text">Dette er en enkel One Time Pad app basert på Vigenèrechifferet.\nVersjon 0.1 Alpha</string>
														
		
		<string name="sms_button">Messages</string>
		<string name="contact_button">Contacts</string>
				<string name="newsms_button">New Sms</string>
					<string name="about_button">About</string>
						<string name="quit_button">Quit</string>
					
												
																							

</resources>
