<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- "close" knapp string -->

            <Button
                android:id="@+id/buttonSms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="90dp"
                android:text="@string/sms_button" />

            <Button
                android:id="@+id/buttonContacts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/buttonSms"
                android:layout_alignRight="@+id/buttonSms"
                android:layout_below="@+id/buttonSms"
                android:layout_marginTop="20dp"
                android:text="@string/contact_button" />

            <Button
                android:id="@+id/buttonAbout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/buttonContacts"
                android:layout_alignRight="@+id/buttonContacts"
                android:layout_below="@+id/buttonContacts"
                android:layout_marginTop="21dp"
                android:text="@string/about_button" />

            <Button
                android:id="@+id/buttonQuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/buttonAbout"
                android:layout_alignRight="@+id/buttonAbout"
                android:layout_below="@+id/buttonAbout"
                android:layout_marginTop="22dp"
                android:text="@string/quit_button" />

</RelativeLayout>